tests/ui/enum/closure-in-enum-issue-48838.stderr
error[E0308]: mismatched types
  --> $DIR/closure-in-enum-issue-48838.rs:2:14
   |
LL |     Square = |x| x,
   |              ^^^^^ expected `isize`, found closure
   |
   = note: expected type `isize`
           found closure `Functions::Square::{constant#0}::{closure#0}`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
